--- a/NewTrainingFramework/NewTrainingFramework.vcxproj
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj
@@ -121,6 +121,7 @@
     <None Include="..\Readme.doc" />
     <None Include="..\Resources\Shaders\TextureShaderFS.fs" />
     <None Include="..\Resources\Shaders\TextureShaderVS.vs" />
+    <None Include="LightShaderFS.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Utilities\Utilities.vcxproj">
