+ Added Ambient Shader

--- a/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
@@ -98,5 +98,14 @@
     <None Include="..\Resources\Shaders\LightShaderVS.vs">
       <Filter>Resources\Shaders</Filter>
     </None>
+    <None Include="..\Resources\Shaders\AmbientShaderFS.fs">
+      <Filter>Resources\Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\DiffuseShaderFS.fs">
+      <Filter>Resources\Shaders</Filter>
+    </None>
+    <None Include="..\Resources\Shaders\SpecularShaderFS.fs">
+      <Filter>Resources\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
